# fetchmixes

./: Cargo.toml
queries/: UserStatsCard.graphql  UserUploadsPageQuery.graphql
src/: data.rs  db.rs  main.rs
