[package]
name = "fetchmixes"
version = "0.1.0"
authors = ["Erin Moon <erin@hashbang.sh>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
exitfailure = "0.5.1"
structopt = "0.2.15"
reqwest = "0.9.16"
log = "0.4.6"
env_logger = "0.6.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
url = "1.7.2"
rusqlite = "0.18.0"
chrono = {version = "0.4.6", features = ["serde"]}
